--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ par cilvēka pašattīstības iespējām.
 
 <p style="position: absolute; top:0px; left:750px; width:400px;  font-size:120%; color: blue; background-color: white; text-align: left;">
 <br>
-<a href="http://www.delfi.lv">www.DELFI.lv</a>
+<a href="descartes0000.html">descartes0000.html</a>
 
 <br>
 <br>
