--- a/index.html
+++ b/index.html
@@ -18,16 +18,6 @@
 
 <body>
 
-<?php
-$myfile = fopen("statistika000.txt", "r") or die("Unable to open file!");
-$skatits = fgets($myfile);
-fclose($myfile);
-$myfile = fopen("statistika000.txt", "w") or die("Unable to open file!");
-$skatits = $skatits+1; 
-fwrite($myfile, $skatits);
-fclose($myfile);
-?>
-
 <p style="position: absolute; top:0px; left:30px; width:700px;  font-size:260%; color: blue; background-color: white; ">
 MŪŽĪGĀ, NEKAD NEBEIDZAMĀ SEVIS IZZINĀŠANA UN PILNVEIDOŠANA
 </p>
@@ -222,7 +212,8 @@ par cilvēka pašattīstības iespējām.
 <p style="position: absolute; top:0px; left:750px; width:400px;  font-size:120%; color: blue; background-color: white; text-align: left;">
 <br>
 <a href="descartes0000.html">descartes0000.html</a>
-
+<br>
+<a href="bilde1.pdf">bilde1.pdf</a>
 <br>
 <br>
 
