--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ par cilvēka pašattīstības iespējām.
 <br>
 <a href="bilde1.pdf">bilde1.pdf</a>
 <br>
+<a href="veidopats.html">veidopats.html</a>
+<br>
 <br>
 
 <b>ĪSI UN SKAIDRI -- KAS TE KONKRĒTI IR TĀDS, KAS ŠO VĒSTĪJUMU ATŠĶIR NO BEZGALĪGĀ BIRUMA
