--- a/index000.html
+++ b/index000.html
@@ -217,6 +217,8 @@ par cilvēka pašattīstības iespējām.
 <br>
 <a href="veidopats.html">veidopats.html</a>
 <br>
+<a href="/smart/druka/index.html">Drukajamas MIKLAS</a>
+<br>
 <br>
 
 <b>ĪSI UN SKAIDRI -- KAS TE KONKRĒTI IR TĀDS, KAS ŠO VĒSTĪJUMU ATŠĶIR NO BEZGALĪGĀ BIRUMA
