--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ par cilvēka pašattīstības iespējām.
 <br>
 <a href="veidopats.html">veidopats.html</a>
 <br>
-<a href="/smart/druka/index.html">Drukajamas MIKLAS</a>
+<a href="/sharpmind/druka/index.html">Drukajamas MIKLAS</a>
 <br>
 <br>
 
