--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ FILOSOFIJA
 </h2>
 
 <center>
-<a href="biblioteka/biblioteka0000.html">BIBLIOTĒKA</a>
+<a href="dekarts/descartes0000.html">BIBLIOTĒKA</a>
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
 </p><p>
