--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ FILOSOFIJA
 </h2>
 
 <center>
-<a href="https://algal16.github.io/index-medit.html">BIBLIOTĒKA</a>
+<a href="index-medit.html">BIBLIOTĒKA</a>
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
 </p><p>
