--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ FILOSOFIJA
 <center>
 <a href="http://www.delfi.lv">DELFI</a>
 </p><p>
-<a href="http://www.algal16.github.io/sharpmind/veidopats.html">sharpmind</a> 
+<a href="https://github.com/algal16/algal16.github.io//sharpmind/veidopats.html">sharpmind</a> 
 </p><p>
 <a href="racirrac/racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
 
