--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ FILOSOFIJA
 </p><p>
 <a href="https://algal16.github.io/sharpmind/veidopats.html">sharpmind</a> 
 </p><p>
-<a href="sharpmind/veidopats.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
+<a href="sharpmind/index.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
 
 </p>
 
