--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ FILOSOFIJA
 <center>
 <a href="http://www.delfi.lv">DELFI</a>
 </p><p>
-<a href="https://algal16.github.io/sharpmind/veidopats.html">sharpmind</a> 
+<a href="prove.html">prove</a> 
 </p><p>
-<a href="sharpmind/index.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
+<a href="sharpmind/index.html">sharpmind/index.html</a> 
 
 </p>
 
