--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ FILOSOFIJA
 </p><p>
 <a href="prove.html">prove</a> 
 </p><p>
-<a href="sharpmind/index.html">sharpmind/index.html</a> 
+<a href="sharpmind/index.html">sharpmind/index.html</a>
+ </p><p>
+<a href="bilde1.pdf">bilde1.pdf</a> 
 
 </p>
 
