--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@ FILOSOFIJA
 </p><p>
 <a href="sharpmind/index.html">sharpmind/index.html</a>
  </p><p>
-<a href="bilde1.pdf">bilde1.pdf</a> 
+<a href="bilde1.pdf">bilde1.pdf</a>
+ </p><p>
+ <a href="sharpmind/druka/index.html">sharpmind/druka/index.html</a>
+ </p><p>
 
 </p>
 
