--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ FILOSOFIJA
  </p><p>
  <a href="sharpmind/druka/index.html">sharpmind/druka/index.html</a>
  </p><p>
+ <a href="http://www.algal16.github.io/sharpmind/druka/index.html">http://www.algal16.github.io/sharpmind/druka/index.html</a>
+ </p><p>
 
 </p>
 
