--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ FILOSOFIJA
  </p><p>
  <a href="sharpmind/druka/index.html">sharpmind/druka/index.html</a>
  </p><p>
- <a href="https://algal16.github.io/sharpmind/druka/index.html">http://www.algal16.github.io/sharpmind/druka/index.html</a>
+ <a href="https://algal16.github.io/sharpmind/druka/index.html">https://algal16.github.io/sharpmind/druka/index.html</a>
  </p><p>
 
 </p>
