--- a/index0.html
+++ b/index0.html
@@ -6,7 +6,8 @@ bibliotēka
 </title>
 </head>
 
-<body text=black bgcolor=white link=purple vlink=blue alink=red>
+<body text=black bgcolor=white
+ link=purple vlink=blue alink=red>
 
 <h2>
 <center>
@@ -17,7 +18,7 @@ FILOSOFIJA
 </h2>
 
 <center>
-<a href="biblioteka/biblioteka0000.html">BIBLIOTĒKA</a>
+<a href="filosofi.index.html">filosofi</a>
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
 </p><p>
