--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ FILOSOFIJA
 </h2>
 
 <center>
-<a href="filosofi.index.html">filosofi</a>
+<a href="filosofi/index.html">filosofi</a>
 </p><p>
-<a href="hermetisms/herm000.html">HERMETISMS</a> 
+<a href="https://algal16.github.io/filosofi/index.html">algal16.github.io/filosofi/index.html</a> 
 </p><p>
 <a href="racirrac/racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
 
