--- a/filosofi/dekarts/pirma-filosofija-krie/index.html
+++ b/filosofi/dekarts/pirma-filosofija-krie/index.html
@@ -15,21 +15,21 @@
 <br>
 И РАЗЛИЧИЕ МЕЖДУ ЧЕЛОВЕЧЕСКОЙ ДУШОЙ И ТЕЛОМ 
 </h2>
-<a href="uzruna.html">.....Ученейших и славнейших членов священного теологического факультета в Париже приветствует Рене Декарт</a>
+<a href="uzruna.pdf">.....Ученейших и славнейших членов священного теологического факультета в Париже приветствует Рене Декарт</a>
 <br>
-<a href="ievads.html">.....Предисловие для читателя</a>
+<a href="ievads.pdf">.....Предисловие для читателя</a>
 <br>
-<a href="teksts01.html">.....ПЕРВОЕ РАЗМЫШЛЕНИЕ - О том, что может быть подвергнуто сомнению</a>
+<a href="teksts01.pdf">.....ПЕРВОЕ РАЗМЫШЛЕНИЕ - О том, что может быть подвергнуто сомнению</a>
 <br>
-<a href="teksts02.html">.....ВТОРОЕ РАЗМЫШЛЕНИЕ - О природе человеческого ума: о том, что ум легче познать, нежели тело</a>
+<a href="teksts02.pdf">.....ВТОРОЕ РАЗМЫШЛЕНИЕ - О природе человеческого ума: о том, что ум легче познать, нежели тело</a>
 <br>
-<a href="teksts03.html">.....ТРЕТЬЕ РАЗМЫШЛЕНИЕ - О Боге – что он существует</a>
+<a href="teksts03.pdf">.....ТРЕТЬЕ РАЗМЫШЛЕНИЕ - О Боге – что он существует</a>
 <br>
-<a href="teksts04.html">.....ЧЕТВЕРТОЕ РАЗМЫШЛЕНИЕ - Об истине и лжи</a>
+<a href="teksts04.pdf">.....ЧЕТВЕРТОЕ РАЗМЫШЛЕНИЕ - Об истине и лжи</a>
 <br>
-<a href="teksts05.html">.....ПЯТОЕ РАЗМЫШЛЕНИЕ - О сущности материальных вещей, и снова о Боге – о том, что он существует</a>
+<a href="teksts05.pdf">.....ПЯТОЕ РАЗМЫШЛЕНИЕ - О сущности материальных вещей, и снова о Боге – о том, что он существует</a>
 <br>
-<a href="teksts06.html">.....ШЕСТОЕ РАЗМЫШЛЕНИЕ - О существовании материальных вещей и о реальном различии между умом и телом</a>
+<a href="teksts06.pdf">.....ШЕСТОЕ РАЗМЫШЛЕНИЕ - О существовании материальных вещей и о реальном различии между умом и телом</a>
 <p>
 </center>
 </body>
