--- a/filosofi/dekarts/index.html
+++ b/filosofi/dekarts/index.html
@@ -15,7 +15,7 @@ Renē Dekarts
 </Center>
 <p>
 
-<A HREF="metode-krie/descartes-krie-sakums.html">РАССУЖДЕНИЕ О МЕТОДЕ, ЧТОБЫ ВЕРНО НАПРАВЛЯТЬ СВОЙ РАЗУМ И ОТЫСКИВАТЬ ИСТИНУ В НАУКАХ (1637)</A>
+<A HREF="metode-krie/index.html">РАССУЖДЕНИЕ О МЕТОДЕ, ЧТОБЫ ВЕРНО НАПРАВЛЯТЬ СВОЙ РАЗУМ И ОТЫСКИВАТЬ ИСТИНУ В НАУКАХ (1637)</A>
 <p>
 <A HREF="metode-angl/dekarts-metode-angl.html">DISCOURSE ON THE METHOD OF RIGHTLY CONDUCTING THE REASON,
 AND SEEKING TRUTH IN THE SCIENCES</A><BR>
