--- a/filosofi/dekarts/metode-krie/index.html
+++ b/filosofi/dekarts/metode-krie/index.html
@@ -14,20 +14,20 @@
 <br>
 И ОТЫСКИВАТЬ ИСТИНУ В НАУКАХ (1637)
 </h2>
-<a href="descartes-krie-0000.html">ВВЕДЕНИЕ АВТОРА</a>
+<a href="descartes-krie-0000.pdf">ВВЕДЕНИЕ АВТОРА</a>
 <br>
-<a href="descartes-krie-0001.html">ЧАСТЬ ПЕРВАЯ - Соображения, касающиеся наук</a>
+<a href="descartes-krie-0001.pdf">ЧАСТЬ ПЕРВАЯ - Соображения, касающиеся наук</a>
 <br>
-<a href="descartes-krie-0002.html">ЧАСТЬ ВТОРАЯ - Основные правила метода</a>
+<a href="descartes-krie-0002.pdf">ЧАСТЬ ВТОРАЯ - Основные правила метода</a>
 <br>
-<a href="descartes-krie-0003.html">ЧАСТЬ ТРЕТЬЯ - Несколько правил морали, извлеченных из этого метода</a>
+<a href="descartes-krie-0003.pdf">ЧАСТЬ ТРЕТЬЯ - Несколько правил морали, извлеченных из этого метода</a>
 <br>
-<a href="descartes-krie-0004.html">ЧАСТЬ ЧЕТВЕРТАЯ - Доводы, доказывающие существование бога и бессмертие души, или основания метафизики
+<a href="descartes-krie-0004.pdf">ЧАСТЬ ЧЕТВЕРТАЯ - Доводы, доказывающие существование бога и бессмертие души, или основания метафизики
 </a>
 <br>
-<a href="descartes-krie-0005.html">ЧАСТЬ ПЯТАЯ - Порядок физических вопросов</a>
+<a href="descartes-krie-0005.pdf">ЧАСТЬ ПЯТАЯ - Порядок физических вопросов</a>
 <br>
-<a href="descartes-krie-0006.html">ЧАСТЬ ШЕСТАЯ - Что необходимо, чтобы продвинуться вперед в исследовании природы</a><br>
+<a href="descartes-krie-0006.pdf">ЧАСТЬ ШЕСТАЯ - Что необходимо, чтобы продвинуться вперед в исследовании природы</a><br>
 <p>
 </center>
 </body>
