--- a/filosofi/dekarts/index.html
+++ b/filosofi/dekarts/index.html
@@ -17,7 +17,7 @@ Renē Dekarts
 
 <A HREF="metode-krie/index.html">РАССУЖДЕНИЕ О МЕТОДЕ, ЧТОБЫ ВЕРНО НАПРАВЛЯТЬ СВОЙ РАЗУМ И ОТЫСКИВАТЬ ИСТИНУ В НАУКАХ (1637)</A>
 <p>
-<A HREF="metode-angl/dekarts-metode-angl.html">DISCOURSE ON THE METHOD OF RIGHTLY CONDUCTING THE REASON,
+<A HREF="dekarts-metode-angl.pdf">DISCOURSE ON THE METHOD OF RIGHTLY CONDUCTING THE REASON,
 AND SEEKING TRUTH IN THE SCIENCES</A><BR>
 <p>
 <A HREF="pirma-filosofija-krie/index.html">Рене Декарт
