Update and rename index0.html to publikacijas/index.html

--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -6,7 +6,8 @@ bibliotēka
 </title>
 </head>
 
-<body text=black bgcolor=white link=purple vlink=blue alink=red>
+<body text=black bgcolor=white
+ link=purple vlink=blue alink=red>
 
 <h2>
 <center>
@@ -21,7 +22,7 @@ FILOSOFIJA
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
 </p><p>
-<a href="racirrac/racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
+<a href="racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
 
 </p>
 
