--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -22,7 +22,7 @@ FILOSOFIJA
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
 </p><p>
-<a href="racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
+<a href="racirrac06okt3013.pdf">RACIONĀLAIS IRRACIONĀLISMS</a> 
 
 </p>
 
