--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@ FILOSOFIJA
 <center>
 <a href="filosofi/index.html">filosofi</a>
 </p><p>
-<a href="https://algal16.github.io/filosofi/index.html">algal16.github.io/filosofi/index.html</a> 
-</p><p>
-<a href="racirrac/racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
-
+<a href="publikacijas/index.html">publikacijas</a> 
 </p>
 
 </center>
