--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -20,8 +20,11 @@ FILOSOFIJA
 <center>
 <p>
 <a href="racirrac-06okt2013.pdf">RACIONĀLAIS IRRACIONĀLISMS</a> 
+</p><p>
+<a href="atklatt-sevi-alberts-aldersons-2018.pdf">ATKLĀT SEVI</a>
+ 
+ 
 </p>
-
 </center>
 
 </body>
