--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -21,9 +21,11 @@ FILOSOFIJA
 <p>
 <a href="racirrac-06okt2013.pdf">RACIONĀLAIS IRRACIONĀLISMS</a> 
 </p><p>
-<a href="atklatt-sevi-alberts-aldersons-2018.pdf">ATKLĀT SEVI</a>
- 
- 
+<a href="atklat-sevi-aldersons-alberts-2018.pdf">ATKLĀT SEVI</a>
+</p><p>
+<a href="izprast-sevi-aldersons-alberts-2018.pdf">IZPRAST SEVI</a> 
+</p><p>
+<a href="veidot-sevi-aldersons-alberts-2018.pdf">VEIDOT SEVI</a>
 </p>
 </center>
 
