--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -26,6 +26,8 @@ FILOSOFIJA
 <a href="izprast-sevi-aldersons-alberts-2018.pdf">IZPRAST SEVI</a> 
 </p><p>
 <a href="veidot-sevi-aldersons-alberts-2018.pdf">VEIDOT SEVI</a>
+</p><p>
+<a href="dala1.pdf">PRĀTA MĪKLaS - 1. daļa</a>
 </p>
 </center>
 
