--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -27,7 +27,7 @@ FILOSOFIJA
 </p><p>
 <a href="veidot-sevi-aldersons-alberts-2018.pdf">VEIDOT SEVI</a>
 </p><p>
-<a href="dala1.pdf">PRĀTA MĪKLaS - 1. daļa</a>
+<a href="dala1.pdf">PRĀTA MĪKLAS - 1. daļa</a>
 </p>
 </center>
 
