--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -27,7 +27,15 @@ FILOSOFIJA
 </p><p>
 <a href="veidot-sevi-aldersons-alberts-2018.pdf">VEIDOT SEVI</a>
 </p><p>
-<a href="dala1.pdf">PRĀTA MĪKLAS - 1. daļa</a>
+<a href="prata-miklas-001-100.pdf">PRĀTA MĪKLAS - 001-100</a>
+</p><p>
+<a href="prata-miklas-101-150.pdf">PRĀTA MĪKLAS - 101-150</a>
+</p><p>
+<a href="prata-miklas-151-175.pdf">PRĀTA MĪKLAS - 151-175</a>
+</p><p>
+<a href="prata-miklas-176-186.pdf">PRĀTA MĪKLAS - 176-186</a>
+</p><p>
+<a href="prata-miklas-187-200.pdf">PRĀTA MĪKLAS - 187-200</a>
 </p>
 </center>
 
