--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -36,8 +36,11 @@ FILOSOFIJA
 <a href="prata-miklas-176-186.pdf">PRĀTA MĪKLAS - 176-186</a>
 </p><p>
 <a href="prata-miklas-187-200.pdf">PRĀTA MĪKLAS - 187-200</a>
+</p><p>
+<a href="BJSTR.MS.ID.001395.pdf.pdf">BJSTR.MS.ID.001395.pdf</a>
+ 
 </p>
 </center>
-
+BJSTR.MS.ID.001395.pdf
 </body>
 </html>
