--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -37,7 +37,12 @@ FILOSOFIJA
 </p><p>
 <a href="prata-miklas-187-200.pdf">PRĀTA MĪKLAS - 187-200</a>
 </p><p>
-<a href="BJSTR.MS.ID.001395.pdf.pdf">BJSTR.MS.ID.001395.pdf</a>
+<a href="BJSTR.MS.ID.001395.pdf.pdf">Development of Time Registration and New Criteria</a>
+</p><p>
+<a href="BJSTR.MS.ID.001395.pdf.pdf">Mathematical Algorithm for Heart Rate Variability
+Analysis</a>
+</p><p>
+<a href="BJSTR.MS.ID.001395.pdf.pdf">Development of Time Registration and New Criteria</a>
  
 </p>
 </center>
