--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -39,7 +39,7 @@ FILOSOFIJA
 </p><p>
 <a href="BJSTR.MS.ID.001395.pdf.pdf">Development of Time Registration and New Criteria</a>
 </p><p>
-<a href="BJSTR.MS.ID.001395.pdf.pdf">Mathematical Algorithm for Heart Rate Variability
+<a href="AIASABEBI-62-ALBU-ALGORITHM.pdf">Mathematical Algorithm for Heart Rate Variability
 Analysis</a>
 </p><p>
 <a href="BJSTR.MS.ID.001395.pdf.pdf">Development of Time Registration and New Criteria</a>
