--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -42,7 +42,7 @@ FILOSOFIJA
 <a href="AIASABEBI-62-ALBU-ALGORITHM.pdf">Mathematical Algorithm for Heart Rate Variability
 Analysis</a>
 </p><p>
-<a href="BJSTR.MS.ID.001395.pdf.pdf">Development of Time Registration and New Criteria</a>
+<a href="JMESSP13420257-BUAL-IN-DEPTH-ALGORITHM.pdf">Development of Time Registration and New Criteria</a>
  
 </p>
 </center>
