--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -39,10 +39,9 @@ FILOSOFIJA
 </p><p>
 <a href="BJSTR.MS.ID.001395.pdf.pdf">Development of Time Registration and New Criteria</a>
 </p><p>
-<a href="AIASABEBI-62-ALBU-ALGORITHM.pdf">Mathematical Algorithm for Heart Rate Variability
-Analysis</a>
+<a href="AIASABEBI-62-ALBU-ALGORITHM.pdf">Mathematical Algorithm for Heart Rate Variability Analysis</a>
 </p><p>
-<a href="JMESSP13420257-BUAL-IN-DEPTH-ALGORITHM.pdf">Development of Time Registration and New Criteria</a>
+<a href="JMESSP13420257-BUAL-IN-DEPTH-ALGORITHM.pdf">In Depth Mathematical Algorithm For Heart Rate Variability Analysis</a>
  
 </p>
 </center>
