--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -27,22 +27,19 @@ FILOSOFIJA
 </p><p>
 <a href="veidot-sevi-aldersons-alberts-2018.pdf">VEIDOT SEVI</a>
 </p><p>
-<a href="prata-miklas-001-100.pdf">PRĀTA MĪKLAS - 001-100</a>
-</p><p>
-<a href="prata-miklas-101-150.pdf">PRĀTA MĪKLAS - 101-150</a>
-</p><p>
-<a href="prata-miklas-151-175.pdf">PRĀTA MĪKLAS - 151-175</a>
-</p><p>
-<a href="prata-miklas-176-186.pdf">PRĀTA MĪKLAS - 176-186</a>
-</p><p>
-<a href="prata-miklas-187-200.pdf">PRĀTA MĪKLAS - 187-200</a>
+<a href="prata-miklas-001-100.pdf">PRĀTA MĪKLAS - (001-100)</a>
+<a href="prata-miklas-101-150.pdf">(101-150)</a>
+<a href="prata-miklas-151-175.pdf">(151-175)</a>
+<a href="prata-miklas-176-186.pdf">(176-186)</a>
+<a href="prata-miklas-187-200.pdf">9187-200)</a>
+<a href="prata-miklas-201-250.pdf">(201-250)</a>
+<a href="prata-miklas-251-301.pdf">(251-301)</a>
 </p><p>
 <a href="BJSTR.MS.ID.001395.pdf">Development of Time Registration and New Criteria</a>
 </p><p>
 <a href="AIASABEBI-62-ALBU-ALGORITHM.pdf">Mathematical Algorithm for Heart Rate Variability Analysis</a>
 </p><p>
 <a href="JMESSP13420257-BUAL-IN-DEPTH-ALGORITHM.pdf">In Depth Mathematical Algorithm For Heart Rate Variability Analysis</a>
- 
 </p>
 </center>
 </body>
