--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -31,7 +31,7 @@ FILOSOFIJA
 <a href="prata-miklas-101-150.pdf">(101-150)</a>
 <a href="prata-miklas-151-175.pdf">(151-175)</a>
 <a href="prata-miklas-176-186.pdf">(176-186)</a>
-<a href="prata-miklas-187-200.pdf">9187-200)</a>
+<a href="prata-miklas-187-200.pdf">(187-200)</a>
 <a href="prata-miklas-201-250.pdf">(201-250)</a>
 <a href="prata-miklas-251-301.pdf">(251-301)</a>
 </p><p>
