--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <title>
-bibliotēka
+publications
 </title>
 </head>
 
@@ -12,7 +12,7 @@ bibliotēka
 <h2>
 <center>
 <font color =navy>
-FILOSOFIJA
+P U B L I K Ā C I J A S
 </font>
 </center>
 </h2>
