--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -40,7 +40,10 @@ P U B L I K Ā C I J A S
 <a href="AIASABEBI-62-ALBU-ALGORITHM.pdf">Mathematical Algorithm for Heart Rate Variability Analysis</a>
 </p><p>
 <a href="JMESSP13420257-BUAL-IN-DEPTH-ALGORITHM.pdf">In Depth Mathematical Algorithm For Heart Rate Variability Analysis</a>
+</p><p>
+<a href="WSEAS_time_reg_17%3Dsalidzinat.pdf">Time Registration and Life Science Data Registration</a>
 </p>
+
 </center>
 </body>
 </html>
