--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -42,6 +42,8 @@ P U B L I K Ā C I J A S
 <a href="JMESSP13420257-BUAL-IN-DEPTH-ALGORITHM.pdf">In Depth Mathematical Algorithm For Heart Rate Variability Analysis</a>
 </p><p>
 <a href="WSEAS_time_reg_17%3Dsalidzinat.pdf">Time Registration and Life Science Data Registration</a>
+</p><p>
+<a href="MMA_BuAl_2018-sigulda.pdf">Discovery assumption for time registration< in the heart rate variability/a>
 </p>
 
 </center>
