--- a/publikacijas/index.html
+++ b/publikacijas/index.html
@@ -43,7 +43,9 @@ P U B L I K Ā C I J A S
 </p><p>
 <a href="WSEAS_time_reg_17%3Dsalidzinat.pdf">Time Registration and Life Science Data Registration</a>
 </p><p>
-<a href="MMA_BuAl_2018-sigulda.pdf">Discovery assumption for time registration< in the heart rate variability/a>
+<a href="MMA_BuAl_2018-sigulda.pdf">Discovery assumption for time registration< in the heart rate variability</a>
+</p><p>
+<a href="NAUN_18-006.pdf">New Idea of Time and Life Science Data Registration</a>
 </p>
 
 </center>
