--- a/maniraksti/aaa000.html
+++ b/maniraksti/aaa000.html
@@ -6,7 +6,8 @@ bibliotēka
 </title>
 </head>
 
-<body text=black bgcolor=white link=purple vlink=blue alink=red>
+<body text=black bgcolor=white
+ link=purple vlink=blue alink=red>
 
 <h2>
 <center>
