--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ FILOSOFIJA
 <a href="filosofi/index.html">filosofi</a>
 </p><p>
 <a href="publikacijas/index.html">publikacijas</a> 
+</p><p>
+<a href="mi-ne-javlajemsja-celoveceskimi.html">mi-ne-javlajemsja-celoveceskimi.html</a> 
 </p>
 
 </center>
