--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@ bibliotēka
 <h2>
 <center>
 <font color =navy>
-FILOSOFIJA
+M A I N  I D E A S  A N D D I R E C T I O N S
 </font>
 </center>
 </h2>
 
 <center>
-<a href="filosofi/index.html">filosofi</a>
 </p><p>
-<a href="publikacijas/index.html">publikacijas</a> 
+<a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
 </p><p>
-<a href="maniraksti/mi-ne-javlajemsja-celoveceskimi.html">maniraksti/mi-ne-javlajemsja-celoveceskimi.html</a> 
+<a href="maniraksti/mi-ne-javlajemsja-celoveceskimi.html">МЫ НЕ ЯВЛЯЕМСЯ ЧЕЛОВЕЧЕСКИМИ СУЩЕСТВАМИ С ДУХОВНЫМ ОПЫТОМ; МЫ ЯВЛЯЕМСЯ ДУХОВНЫМИ СУЩЕСТВАМИ С ЧЕЛОВЕЧЕСКИМ ОПЫТОМ</a> 
+</p>
+<a href="TRANSCENDENCE-as-a-change-of-habitual-perception-rus-201516021.pdfi">ТРАНСЦЕНДЕНЦИЯ как изменение привычного восприятия мира путем целенаправленной
+переработки некоторых важных условных рефлексов</a> 
 </p>
 
 </center>
