--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@ M A I N  I D E A S  A N D D I R E C T I O N S
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
 </p><p>
 <a href="maniraksti/mi-ne-javlajemsja-celoveceskimi.html">МЫ НЕ ЯВЛЯЕМСЯ ЧЕЛОВЕЧЕСКИМИ СУЩЕСТВАМИ С ДУХОВНЫМ ОПЫТОМ; МЫ ЯВЛЯЕМСЯ ДУХОВНЫМИ СУЩЕСТВАМИ С ЧЕЛОВЕЧЕСКИМ ОПЫТОМ</a> 
-</p>
-<a href="maniraksti/TRANSCENDENCE-as-a-change-of-habitual-perception-rus-201516i021.pdfi">ТРАНСЦЕНДЕНЦИЯ как изменение привычного восприятия мира путем целенаправленной
+</p><p>
+<a href="maniraksti/TRANSCENDENCE-as-a-change-of-habitual-perception-rus-201516i021.pdf">ТРАНСЦЕНДЕНЦИЯ как изменение привычного восприятия мира путем целенаправленной
 переработки некоторых важных условных рефлексов</a> 
+</p><p>
+<a href="filosofi/dekarts">FILOSOFI - DEKARTS</a> 
 </p>
 
 </center>
