--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ M A I N  I D E A S  A N D D I R E C T I O N S
 <a href="maniraksti/TRANSCENDENCE-as-a-change-of-habitual-perception-rus-201516i021.pdf">ТРАНСЦЕНДЕНЦИЯ как изменение привычного восприятия мира путем целенаправленной
 переработки некоторых важных условных рефлексов</a> 
 </p><p>
+<a href="maniraksti/renesans-prodolzajetsja.html">РЕНЕСАНС ПРОДОЛЖАЕТСЯ</a> 
+</p><p>
 <a href="filosofi/dekarts">FILOSOFI - DEKARTS</a> 
 </p>
 
