--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ M A I N  I D E A S  A N D D I R E C T I O N S
 </p><p>
 <a href="maniraksti/renesans-prodolzajetsja.html">РЕНЕСАНС ПРОДОЛЖАЕТСЯ</a> 
 </p><p>
+<a href="maniraksti/sila-istini-ili-sila-veri.html">СИЛА ИСТИНЫ ИЛИ СИЛЫ ВЕРЫ</a> 
+</p><p>
 <a href="filosofi/dekarts">FILOSOFI - DEKARTS</a> 
 </p>
 
