--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ bibliotēka
 <h2>
 <center>
 <font color =navy>
-M A I N  I D E A S  A N D D I R E C T I O N S
+M A I N - I D E A S - A N D - D I R E C T I O N S
 </font>
 </center>
 </h2>
@@ -20,6 +20,8 @@ M A I N  I D E A S  A N D D I R E C T I O N S
 <center>
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
+</p><p>
+<a href="maniraksti/main-principles.html"A NEW METHOD OF APPLIED PHILOSOPHY FOR SELF-REALIZATION, SELF-DEVELOPMENT AND HARMONIZATION: SHORT INFO</a> 
 </p><p>
 <a href="maniraksti/mi-ne-javlajemsja-celoveceskimi.html">МЫ НЕ ЯВЛЯЕМСЯ ЧЕЛОВЕЧЕСКИМИ СУЩЕСТВАМИ С ДУХОВНЫМ ОПЫТОМ; МЫ ЯВЛЯЕМСЯ ДУХОВНЫМИ СУЩЕСТВАМИ С ЧЕЛОВЕЧЕСКИМ ОПЫТОМ</a> 
 </p><p>
