--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
 </p><p>
-<a href="maniraksti/main-principles.html"A NEW METHOD OF APPLIED PHILOSOPHY FOR SELF-REALIZATION, SELF-DEVELOPMENT AND HARMONIZATION: SHORT INFO</a> 
+<a href="maniraksti/main-principles.html">A NEW METHOD OF APPLIED PHILOSOPHY FOR SELF-REALIZATION, SELF-DEVELOPMENT AND HARMONIZATION: SHORT INFO</a> 
 </p><p>
 <a href="maniraksti/mi-ne-javlajemsja-celoveceskimi.html">МЫ НЕ ЯВЛЯЕМСЯ ЧЕЛОВЕЧЕСКИМИ СУЩЕСТВАМИ С ДУХОВНЫМ ОПЫТОМ; МЫ ЯВЛЯЕМСЯ ДУХОВНЫМИ СУЩЕСТВАМИ С ЧЕЛОВЕЧЕСКИМ ОПЫТОМ</a> 
 </p><p>
