--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 </p>
 
 </center>
+  
+    <title>Website Counter</title>
+    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="styles.css" />
 
+    <div>Website visit count:</div>
+    <div class="website-counter"></div>
+  
+  
 </body>
 </html>
