--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 
 <center>
  <p>
-<a href="http//www.delfi.lv">DELFI</a> 
+<a href="https://www.delfi.lv/">DELFI</a> 
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
 </p><p>
