--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 </h2>
 
 <center>
+<p>
+<a href="https://www.delfi.lv/">DELFI</a> 
+</p><p> 
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
 </p><p>
