--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 
 <center>
 <p>
-<a href="https://www.delfi.lv/">DELFI</a> 
-</p><p> 
+<a href="www.delfi.lv/">DELFI</a> 
+
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
 </p><p>
