--- a/prob002/prob002.html
+++ b/prob002/prob002.html
@@ -96,7 +96,7 @@ Diagram of the operation of the pineal gland for Descartes in the Treaty of Man 
 
    
 
-    <script defer src="index.js"></script>
+    <script defer src="/prob002/index.js"></script>
     <div class="website-counter"></div>
     
 
