--- a/saturs.html
+++ b/saturs.html
@@ -29,7 +29,7 @@
 
 <div class="center">
 <p>
-<a href="/prob002/prob002.html">МЫ НЕ ЯВЛЯЕМСЯ</a> 
+<a href="/prob002/prob002.html">МЫ НЕ ЯВЛЯЕМСЯ ЧЕЛОВЕЧЕСКИМИ СУЩЕСТВАМИ С ДУХОВНЫМ ОПЫТОМ; МЫ ЯВЛЯЕМСЯ ДУХОВНЫМИ СУЩЕСТВАМИ С ЧЕЛОВЕЧЕСКИМ ОПЫТОМ</a> 
     <br>
 <a href="/prob003/prob003.html"> РЕНЕСАНС ПРОДОЛЖАЕТСЯ</a>     
    
