--- a/prob003/prob003.html
+++ b/prob003/prob003.html
@@ -24,7 +24,7 @@
 
 
 <h2>
-<a href="/index.html">СОДЕРЖАНИЕ СТРАНИЦЫ</a> 
+<a href="/saturs.html">СОДЕРЖАНИЕ СТРАНИЦЫ</a> 
 </h2>
 <h2>
 РЕНЕСАНС ПРОДОЛЖАЕТСЯ
