--- a/prob002/prob002.html
+++ b/prob002/prob002.html
@@ -24,7 +24,7 @@
 <header>
 <center>
 <h2>
-<a href="/index.html">СОДЕРЖАНИЕ СТРАНИЦЫ</a> 
+<a href="/saturs.html">СОДЕРЖАНИЕ СТРАНИЦЫ</a> 
 </h2>
 <h2>
 МЫ НЕ ЯВЛЯЕМСЯ ЧЕЛОВЕЧЕСКИМИ СУЩЕСТВАМИ С ДУХОВНЫМ ОПЫТОМ; МЫ ЯВЛЯЕМСЯ ДУХОВНЫМИ СУЩЕСТВАМИ С ЧЕЛОВЕЧЕСКИМ ОПЫТОМ
