--- a/prob003/prob003.html
+++ b/prob003/prob003.html
@@ -138,7 +138,7 @@
 <i> А.А.А., 2015 (по трудам Э. Гуссерля) </i>
 </div>
 
-    <script defer src="/prob003/index.js"></script>
+    <script defer src="/prob003/index003.js"></script>
     <div class="website-counter"></div>
 
 </body> 
