--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 <center>
 <p>
 <a href="http:///www.apollo.lv/">apollo.lv</a> 
+ <p>
+<a href="maniraksti/aaa000.html"> maniraksti/aaa000.html</a> 
+
 
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
@@ -52,3 +55,4 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
   
 </body>
 </html>
+
