--- a/filosofi/index.html
+++ b/filosofi/index.html
@@ -18,7 +18,11 @@ FILOSOFIJA
 </h2>
 
 <center>
-<a href="dekarts/index.html">dekarts</a>
+<a href="akvinastoms/000posti0028.html">﻿Saint Thomas Aquinas (1225–1274): Thought, Meditation and Contemplation</a> 
+ </p>
+<a href="akvinastomd/000posti0030.html"Thomas Aquinas (1225–1274): Knowledge and the Senses</a> 
+<p>
+ <a href="dekarts/index.html">dekarts</a>
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
 </p><p>
@@ -29,3 +33,4 @@ FILOSOFIJA
 
 </body>
 </html>
+
