--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 <a href="http:///www.apollo.lv/">apollo.lv</a> 
  <p>
 <a href="maniraksti/aaa000.html"> maniraksti/aaa000.html</a> 
-
+ <p>
+<a href="filosofi/index.html">FILOSOFI</a> 
 
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
@@ -55,4 +56,5 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
   
 </body>
 </html>
+
 
