--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
 <center>
 <p>
 <a href="http:///www.apollo.lv/">apollo.lv</a> 
- <p>
+</p><p>
 <a href="maniraksti/aaa000.html"> maniraksti/aaa000.html</a> 
- <p>
+</p><p>
 <a href="filosofi/index.html">FILOSOFI</a> 
+</p><p>
+<a href="https://www.inbox.lv/">INBOX</a> 
 
 </p><p>
 <a href="publikacijas/index.html">SOME OF MY LAST PUBLICATIONS</a> 
@@ -56,5 +58,6 @@ M A I N - I D E A S - A N D - D I R E C T I O N S
   
 </body>
 </html>
+
 
 
