--- a/filosofi/index.html
+++ b/filosofi/index.html
@@ -24,6 +24,8 @@ FILOSOFIJA
  </p><p>
 <a href="akvinastoms/000posti0030.html">Thomas Aquinas (1225–1274): Knowledge and the Senses</a> 
  </p><p>
+<a href="aristotelis/000posti0031.html">Аристотель: удивление побуждает людей философствовать</a> 
+ </p><p>
  <a href="dekarts/index.html">dekarts</a>
 </p><p>
 <a href="hermetisms/herm000.html">HERMETISMS</a> 
@@ -35,6 +37,7 @@ FILOSOFIJA
 
 </body>
 </html>
+
 
 
 
