--- a/filosofi/index.html
+++ b/filosofi/index.html
@@ -24,7 +24,7 @@ FILOSOFIJA
  </p><p>
 <a href="akvinastoms/000posti0030.html">Thomas Aquinas (1225–1274): Knowledge and the Senses</a> 
  </p><p>
-<a href="aristotelis/000posti0031.html">Аристотель: удивление побуждает людей философствовать</a> 
+<a href="aristotelis/000posti0031.html"ari</a> 
  </p><p>
  <a href="dekarts/index.html">dekarts</a>
 </p><p>
@@ -37,6 +37,7 @@ FILOSOFIJA
 
 </body>
 </html>
+
 
 
 
