--- a/filosofi/index.html
+++ b/filosofi/index.html
@@ -1,48 +1,310 @@
-﻿<html>
+
+
+
+<!DOCTYPE html>
+
+<html lang="en">
 
 <head>
-<title>
-bibliotēka
-</title>
+
+<meta charset="utf-8">
+<title>algal16.id.lv</title>
+<meta name="description" content="Ideālisma filosofijas loma cilvēka pašattīstībā, tās saistība ar neirofizioloģiju, moderno fizikas zinātni, ticību. Роль философии идеализма в саморазвитии человека, связь с нейрофизиологией, современной физической наукой, верой. The role of idealism philosophy in self-development, relationship with neurophysiology, modern physical science, faith">
+<meta name="keywords" content="Voltaire, Voltērs, Вольтер, Cogito, Descartes, Dekarts, Naive realism, Naivais reālisms, Locke, Loks, Локк, Schopenhauer, Kant, philosophy, Шопенгауер, философия, Кант, Šopenhauers, Kants. filosofija, Transcendental Idealism, Transcendentālais ideālisms, Трансцендентальный идеализм, Веды, Буддизм, Нирвана, Vēdas, Budisms, Nirvāna, George Berkeley, Džordžs Bērklijs, Джордж Беркли">
+<!--[if lt IE 9]>
+<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+<style>
+html { color: black; background-color: white; text-align: center; font-family: times-new-roman; }
+body { width: 990px; margin: 0 auto 0 auto; text-align: left; padding: 5px; }
+header { width: 100%; display: table; }
+article { width: 990px; display: table; }
+nav { width: 330px; float: left; display: table; }
+h2 { color: black; text-align: center;}
+h3{ color: black; text-align: center;}
+body { background-color: white; }
+header { background-color: white; color: grey; text-align: center; }
+nav { background-color: white; text-align: left;}
+article { background-color: white; color blue; text-align: left;}
+textarea {width: 300px; height: 200px; text-align: left; float: center; font-size: 14px;  font-family: times-new-roman; }  
+</style>
+
 </head>
 
-<body text=black bgcolor=white
- link=purple vlink=blue alink=red>
+<body>
+ 
+<header>
+<h3>
+<b>FILOSOFI: darbu fragmenti, komentāri</b>
+</h3>
+</header>
 
-<h2>
-<center>
-<font color =navy>
-FILOSOFIJA
-</font>
-</center>
-</h2>
 
-<center>
+<nav>
 
- <p>
-<a href="akvinastoms/000posti0028.html">﻿Saint Thomas Aquinas (1225–1274): Thought, Meditation and Contemplation</a> 
- </p><p>
-<a href="akvinastoms/000posti0030.html">Thomas Aquinas (1225–1274): Knowledge and the Senses</a> 
- </p><p>
-<a href="aristotelis/000posti0031.html">Аристотель: удивление побуждает людей философствовать</a> 
- </p><p>
- <a href="dekarts/index.html">dekarts</a>
-</p><p>
-<a href="hermetisms/herm000.html">HERMETISMS</a> 
-</p><p>
-<a href="racirrac/racirrac0000.html">RACIONĀLAIS IRRACIONĀLISMS</a> 
+<b>Akvīnas Toms</b>
+<br>
+<a href="akvinastoms/000posti0028.html">Saint Thomas Aquinas (1225–1274): Thought, Meditation and Contemplation</a>
+<br>
+<a href="akvinastoms/000posti0030.html">Thomas Aquinas (1225–1274): Knowledge and the Senses</a>
+
+<br><br>
+<b>Aristotelis</b>
+<br>
+<a href="aristotelis/000posti0031.html">Аристотель:  удивление побуждает людей философствовать</a>
+
+<br><br>
+<b>Francis Bēkons</b>
+<br>
+<a href="bekons/000posti0014.html">Francis Bacon (1561-1626): Of nature in man</a>
+<br>
+<a href="bekons/000posti0016.html">Francis Bacon: Division of all Human Learning</a>
+<br>
+<a href="bekons/lapa007.html">Francis Bacon (1561-1626): Of nature un man</a>
+
+<br><br>
+<b>Anrijs Bergsons</b>
+<br>
+<a href="bergsons/000posti0029.html">Henri Bergson (1859-1941): An Introduction to Metaphysics (quote)</a>
+
+<br><br>
+<b>Džordžs Bērklijs</b>
+<br>
+<a href="berklijs/000posti0001.html">Джордж Беркли: О принципах человечaеского знания (in the end, also in English)</a>
+<br>
+<a href="berklijs/000posti0042.html">Джордж Беркли:  Посвящение своего главного труда Томасу, графу Пемброку</a>
+<br>
+<a href="berklijs/000posti0052.html">Джордж Беркли: О преимуществах имматериализма</a>
+<br>
+<a href="berklijs/000posti0050.html">George Berkeley: Quotes</a>
+<br>
+<a href="berklijs/000posti0047.html">Джордж Беркли о преимуществах своей системы</a>
+<br>
+<a href="berklijs/000posti0075.html">Обидели епископа</a>
+<br>
+<a href="berklijs/000posti0076.html">Джордж Беркли о пригодности вещей</a>
+<br>
+<a href="berklijs/000posti0077.html">The mind that governs and actuates this mundane system</a>
+<br>
+<a href="berklijs/000posti0070.html">Джордж Беркли о том, как материя порождает скептицизм</a>
+<br>
+<a href="berklijs/000posti0081.html">George Berkeley: We have first rais'd a Dust, and then complain, we cannot see</a>
+<br>
+<a href="berklijs/000posti0082.html">George Berkeley about abstract ideas (en, ru)</a> 
+<br>
+<a href="berklijs/lapa004.html">Bērklija darba analīze - G. Berkeley: A Treatise concerning the principles of human knowledge</a>
+<br>
+<a href="berklijs/lapa016.html">Turpinājums - Bērklija darba analīze - G. Berkeley: A Treatise concerning the principles of human knowledge (6-10 paragrāfi)</a>
+
+<br><br>
+<b>Renē Dekarts</b>
+<br>
+<a href="dekarts/000posti0068.html">Рене Декарт: О том, что может быть подвергнуто сомнению</a> 
+<br>
+<a href="dekarts/000posti0058.html">Рене Декарт : Доводы, доказывающие существования Бога и бессмертие души</a>
+
+<br><br>
+<b>Fjodors Dostojevskis</b>
+<br>
+<a href="dostojevskis/000posti0057.html">Достоевский о самой выгодной выгоде</a>
+
+<br><br>
+<b>Džeims Džīns</b>
+<br>
+<a href="dzins/000posti0053.html">Sir James Hopwood Jeans: Quotes</a>
+
+<br><br>
+<b>Johans Gotlībs Fihte</b>
+<br>
+<a href="fihte/000posti0046.html">Johann Gottlieb Fichte: Quotes</a>
+<br>
+<a href="fihte/000posti0051.html">Фихте: Что такое был я до того, как пришел к самосознанию?</a>
+<br>
+<a href="fihte/000posti0062.html">Фихте о человеческом Я</a>
+<br>
+<a href="fihte/000posti0063.html">Johann Gottlieb Fichte - expressions</a>
+
+<br><br>
+<b>Ričards Henrijs</b>
+<br>
+<a href="henrijs/000posti0054.html">Richard Conn Henry: Quotes</a>
+
+
+
+
+</p>
+</nav>
+
+<!--
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+-->
+<nav>
+
+<b>Deivids Hjūms</b>
+<br>
+<a href="jums/000posti0015.html">David Hume (1711-1776): Of the dignity or meanness of human nature</a>
+<br>
+<a href="jums/000posti0043.html">Дэвид Юм: О себялюбии</a>
+<br>
+<a href="jums/000posti0065.html">David Hume - expressions</a>
+<br>
+<a href="jums/000posti0044.html">Дэвид Юм: Моя жизнь</a>
+<br>
+<a href="jums/000posti0048.html">Дейвид Хюм: ﻿О первоначальных принципах правления</a>
+<br>
+<a href="jums/000posti0049.html">Дейвид Хюм: об основе философских исследований</a>
+
+<br><br>
+<b>Vilhrlms Hēgelis</b>
+<br>
+<a href="hegelis/000posti0012.html">Георг Вильгельм Фридрих Гегель: цитата из "Лекции по истории философии"</a>
+
+<br><br>
+<b>Edmunds Huserls</b>
+<br>
+<a href="huserls/000posti0002.html">Эдмунд Гуссерль: Феноменологическая εποχή (эпохе)</a>
+<br>
+<a href="huserls/000posti0019.html">Эдмунд Гуссерль: Бытие как сознание и бытие как реальность. Принципиальное различие способов созерцания</a>
+<br>
+<a href="huserls/000posti0021.html">Эдмунд Гуссерль: Науки с догматической и науки с философской установкой</a>
+<br>
+<a href="huserls/000posti0022.html">Эдмунд Гуссерль: Несомненность имманентного — сомнительность трансцендентного восприятия</a>
+<br>
+<a href="huserls/000posti0026.html">Edmund Husserl (1859-1938) : Quotes</a>
+<br>
+<a href="huserls/000posti0025.html">Э. Гуссерль Парижские доклады</a>
+<br>
+<a href="huserls/lapa025.html">Эдмунд Гуссерль: Тезис естественной установки</a>
+
+<br><br>
+<b>Viktors Igo</b>
+<br>
+<a href="igo/000posti0041.html">Victor Hugo about Voltaire</a>
+
+<br><br>
+<b>Immanuils Kants</b>
+<br>
+<a href="kants/000posti0013.html">Kant and censorship</a>
+<br>
+<a href="kants/000posti0017.html">Иммануил Кант: Об ипохондрии</a>
+<br>
+<a href="kants/000posti0018.html">Иммануил Кант: Какие цели суть в то же время долг?</a>
+<br>
+<a href="kants/000posti0037.html">Иммануэль Кант: Опыт некоторых рассуждений об оптимизме</a>
+<br>
+<a href="kants/000posti0056.html">Кант: заявление по поводу раукоучения Фихте</a>
+<br>
+<a href="kants/000posti0059.html">Кант — императрице Елизавете Петровне</a>
+<br>
+<a href="kants/000posti0064.html">Immanuel Kant - expressions</a>
+<br>
+<a href="kants/lapa021.html">Иммануил Кант: Переход от обычного нравственного разумного познания к философскому</a> 
+<br>
+<a href="kants/lapa022.html">Иммануил Кант: Как возможен категорический императив?</a>
+<br>
+<a href="kants/lapa024.html">Иммануил Кант: Физика, этика, логика</a>
+
+</nav>
+
+<!--
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+-->
+
+<nav>
+
+
+<b>Leibnics</b>
+<br>
+<a href="leibnics/000posti0060.html">Лейбниц - Есть совершеннейшее существо</a>
+
+<br><br>
+<b>Džons Loks</b>
+<br>
+<a href="loks/000posti0006.html">Джон Локк: О рассуждении (1706)</a>
+<br>
+<a href="loks/000posti0007.html">Джон Локк: О предрассудке</a>
+<br>
+<a href="loks/000posti0027.html">Джон Локк: Цитата из "Исследование мнения отца Мальбранша о видении всех вещей в Боге"</a>
+<br>
+<a href="loks/000posti0045.html">Джон Локк: О человеческом разумении (understanding)</a>
+
+<br><br>
+<b>Džovani Mirandola</b>
+<br>
+<a href="mirandola/000posti0032.html">Джованни Пико делла Мирандола: Цитата из “Речь о достоинстве человека”</a>
+
+<br><br>
+<b>Blēzs Paskals</b>
+<br>
+<a href="paskals/000posti0034.html">Blaise Pascal (1623-1662): Thoughts on mind and on style</a>
+<br>
+<a href="paskals/000posti0035.html">Блез Паскаль (1623-1662): Жалкое состояние человека</a>
+ 
+<br><br>
+<b>Platons</b>
+<br>
+<a href="platons/000posti0033.html">Платон: Символ пещеры</a>
+
+<br><br>
+<b>Baruhs Spinoza</b>
+<br>
+<a href="spinoza/000posti0066.html">Baruch Spinoza - expressions</a>
+<br>
+<a href="spinoza/000posti0038.html">Бенедикт Спиноза: Что хорошо и что дурно</a>
+<br>
+<a href="spinoza/000posti0039.html">Бенедикт Спиноза: Что такое мнение, вера и ясное познание</a>
+<br>
+<a href="spinoza/000posti0040.html">Бенедикт Спиноза: Страсть, возникающая из мнения</a>
+
+<br><br>
+<b>Artūrs Šopenhauers</b>
+<br>
+<a href="sopenhauers/000posti0071.html">Шопенгауэр о Канте (1 – мир)</a>
+<br>
+<a href="sopenhauers/000posti0072.html">Шопенгауэр о Канте (2 – этика)</a>
+<br>
+<a href="sopenhauers/000posti0073.html">Шопенгауэр злой – о Канте, Фихте, Шеллинге, Гегеле</a>
+<br>
+<a href="sopenhauers/000posti0074.html">Артур Шопенгауэр – По поводу основного идеалистического взгляда</a>
+<br>
+<a href="sopenhauers/000posti0078.html">Мир есть мое представление</a>
+<br>
+<a href="sopenhauers/000posti0008.html">Arthur Schopenhauer: On women</a>
+<br>
+<a href="sopenhauers/000posti0009.html">Arthur Schopenhauer: The emptiness of existence</a>
+<br>
+<a href="sopenhauers/000posti0010.html">Arthur Schopenhauer: Quotes on reading and books</a>
+<br>
+<a href="sopenhauers/000posti0011.html">Arthur Schopenhauer: On reading and books</a>
+<br>
+<a href="sopenhauers/000posti0020.html">Артур Шопенгауэр - поэт</a>
+<br>
+<a href="sopenhauers/000posti0023.html">Артур Шопенгауэр: О различии между поэтом и философом</a>
+<br>
+<a href="sopenhauers/000posti0024.html">Артур Шопенгауэр: Об интересном</a>
+<br>
+<a href="sopenhauers/000posti0061.html">Arthur Schopenhauer - expressions</a>
+<br>
+<a href="sopenhauers/000posti0067.html">Arthur Schopenhauer: “The world is my idea”</a>
+<br>
+<a href="sopenhauers/000posti0055.html">Шопенгауэр - житейские мудрости</a>
+
+<br><br>
+<b>Voltērs</b>
+<br>
+<a href="volters/000posti0036.html">Вольтер: Существует ли мораль?</a>
+<br>
+<a href="volters/000posti0080.html">Вольтер: Трактат о веротерпимости (цитата)</a>
+
+
+
+
 </p>
 
-</center>
+</nav>
 
-</body>
+</body> 
 </html>
-
-
-
-
-
-
-
-
-
